app-of-apps/docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docs
  labels:
    name: docs
    project: docs
    managed-by: backstage-template
    created-by: backstage
  annotations:
    backstage.io/project-name: "docs"
spec: {}
