app-of-apps/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: docs
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: europe-west1-docker.pkg.dev/appointy-global/common/docs:v16
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      imagePullSecrets:
      - name: artifact-registry
