app-of-apps/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
  labels:
    app: docs
spec:
  selector:
    app: docs
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
